Import of LICHTKIND/kephra-0.3.6_10 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.6_10
gitpan-cpan-path:         LICHTKIND/kephra-0.3.6_10.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/global/default/default.conf
+++ b/share/config/global/default/default.conf
@@ -1,6 +1,6 @@
 <about>
 	purpose = default global settings                    #
-	version = 0.3.6                                      #  says to which program version the file belongs to make merges of new features possible
+	version = 0.3.6.7                                    #  says to which program version the file belongs to make merges of new features possible
 </about>
 <app>
 	<commandlist>
@@ -14,10 +14,11 @@
 	<contextmenu>
 		defaultfile = interface/contextmenus.yml
 		<id>                                # ids of context menus und dynamic menus
-			document_change = &document_change
 			document_context = editpanel_contextmenu
+			document_list = &document_change
 			document_selection = textselection_contextmenu
 			file_history = &file_history
+			file_insert_templates = &insert_templates
 			status_eol = document_lineendchar_contextmenu
 			status_syntaxmode = document_syntaxstyle_contextmenu
 			status_tab = document_whitespace_contextmenu
@@ -268,14 +269,15 @@
 	<open>
 		dir_recursive = 1
 		each_once = 1                                    # opens each file only once
-		in_current_dir = 1                               #opens dialog with the directory of current file
+		in_current_dir = 1                               # opens dialog with the directory of current file
 		into_empty_doc = 0                               # replacing new empty documents while opening a file
 		into_only_empty_doc = 1                          # replacing new empty doc if the empty is the only one
+		notify_change = 0                               # -NI(0|n) timer executed check if file has changed in sec
 		only_text = 1                                    # to open only text files
 		single_doc = 0                                   # opens only 1 document at once, enables an single document editor
 	</open>
 	<save>
-		auto_save = 0                                    # -NI  timer executed save
+		auto_save = 0                                    # -NI(0|n) timer executed save after n sec
 		b4_close = ask                                   # (yes|no|ask) filesaving before closing a file
 		b4_quit = ask                                    # (yes|no|ask) filesaving before closing the programm
 		change_doc = 0                                   # saves everytime you change document
@@ -284,7 +286,6 @@
 		overwrite = ask                                  # (yes|no|ask)
 		reload_config = 1                                # reload config automatic after saving it
 		tilde_backup = 0                                 # creates UNIX  backup files with filename+~
-		timer = 20                                       # -NI autosave after ? seconds -NI not implemented
 		unchanged = 0                                    # saves (touches) automaticly also unchanged files
 		unchanged_all = 0                                # saves (touches)  all files even if unchanged
 	</save>
