--- a/share/config/localisation/cesky_iso.conf
+++ b/share/config/localisation/cesky_iso.conf
@@ -882,17 +882,23 @@
 		import_session = Import File Session
 		export_session = Export File Session
 		open_dir = Open Files of Directory :
+		file_changed = File Changed
+		file_changed_msg = The following file has changed:
 	</file>
 	<general>
 		apply = Apply
 		save = Save
+		save_reload = Save as ... and Reload
 		overwrite = Overwrite
 		restore = Restore
+		reload = Reload
+		ignore = Ignore
 		cancel = Cancel
 		close = Close
 		all = All
 		select = Select
 		selected = Selected
+		changed = Changed
 		none = None
 		dont_allow = Your settings dont allow this.
 	</general>
