--- a/share/config/localisation/deutsch.conf
+++ b/share/config/localisation/deutsch.conf
@@ -882,17 +882,23 @@
 		import_session = Importiere Dateigruppe
 		export_session = Exportiere Dateigruppe
 		open_dir = Oeffne Dateien im Verzeichnis :
+		file_changed = Dateiaenderung
+		file_changed_msg = Die folgende Datei hat sich geaendert:
 	</file>
 	<general>
 		apply = Uebernehmen
 		save = Speichern
-		overwrite = Ueberschreibe
+		save_reload = Speichern und neu Laden
+		overwrite = Ueberschreiben
 		restore = Zuruecksetzen
+		reload = Neu Laden
+		ignore = Ignorieren
 		cancel = Abbrechen
 		close = Schliessen
 		all = Alle
 		select = Waehle
 		selected = Auswahl
+		changed = Geaendert
 		none = Keine
 		dont_allow = Deine Einstellungen erlauben das nicht.
 	</general>
