--- a/share/config/session/current.conf
+++ b/share/config/session/current.conf
@@ -1,4 +1,4 @@
-current_nr = 1
+current_nr = 2
 <document>
     EOL = cr+lf
     codepage = 
@@ -13,7 +13,7 @@ current_nr = 1
 <document>
     EOL = cr+lf
     codepage = 
-    cursor_pos = 0
+    cursor_pos = 1374
     edit_pos = -1
     file_path = share\config\localisation\deutsch_iso.conf
     readonly = protect
@@ -24,7 +24,7 @@ current_nr = 1
 <document>
     EOL = cr+lf
     codepage = 
-    cursor_pos = 7876
+    cursor_pos = 7637
     edit_pos = 2898
     file_path = D:\src\perl\editor\dev\base\lib\Kephra\Document.pm
     readonly = protect
@@ -51,6 +51,17 @@ current_nr = 1
     cursor_pos = 0
     edit_pos = -1
     file_path = share\config\interface\mainmenu.yml
+    readonly = protect
+    syntaxmode = yaml
+    tab_size = 4
+    tab_use = 1
+</document>
+<document>
+    EOL = cr+lf
+    codepage = 
+    cursor_pos = 445
+    edit_pos = 0
+    file_path = D:\src\perl\editor\releasetool\projects.yml
     readonly = protect
     syntaxmode = yaml
     tab_size = 4
