--- a/share/config/localisation/deutsch_iso.conf
+++ b/share/config/localisation/deutsch_iso.conf
@@ -882,17 +882,23 @@
 		import_session = Importiere Dateigruppe
 		export_session = Exportiere Dateigruppe
 		open_dir = Öffne Dateien in Verzeichnis :
+		file_changed = Dateiänderung
+		file_changed_msg = Die folgende Datei hat sich geändert:
 	</file>
 	<general>
 		apply = Übernehmen
 		save = Speichern
-		overwrite = Überschreibe
+		save_reload = Speichern und neu Laden
+		overwrite = Überschreiben
 		restore = Zurücksetzen
+		reload = Neu Laden
+		ignore = Ignorieren
 		cancel = Abbrechen
 		close = Schliessen
 		all = Alle
 		select = Wähle
 		selected = Auswahl
+		changed = Geändert
 		none = Keine
 		dont_allow = Deine Einstellungen erlauben das nicht.
 	</general>
