Import of LICHTKIND/kephra-0.3.6_12 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.6_12
gitpan-cpan-path:         LICHTKIND/kephra-0.3.6_12.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/Meta.yml
+++ b/Meta.yml
@@ -1,6 +1,6 @@
 name: kephra
-version: 0.3.6.7
-abstract: crossplatform GUI Editor
+version: 0.3.6.12
+abstract: crossplatform GUI Text-Editor
 author: lichtkind@cpan.org
 license: GPL
 distribution_type: script
