Import of LICHTKIND/kephra-0.3.7_3 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.7_3
gitpan-cpan-path:         LICHTKIND/kephra-0.3.7_3.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/global/default/default.conf
+++ b/share/config/global/default/default.conf
@@ -198,7 +198,7 @@
 		</marker>
 		text = 4                            # (0..n) width of the extra margin around the text itself in Pixel
 	</margin>
-	scroll_width = 640                      # defaultwitdth of the text area, set it low to prevent scrollbars
+	scroll_width = 640                      # (n|auto) defaultwitdth of the text area, set it low to prevent scrollbars
 	word_chars = _-abcdefghijklmnopqrstuvwxyzäöüABCDEFGHIJKLMNOPQRSTUVWXYZÄÖÜ0123456789
 </editpanel>
 <file>
