--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -706,8 +706,8 @@
 				<comment>
 					add-perl = ctrl+k
 					del-perl = ctrl+shift+k
-					add-xml = ctrl+b
-					del-xml = ctrl+shift+b
+					add-xml = ctrl+h
+					del-xml = ctrl+shift+h
 				</comment>
 				<format>
 					block-on-right-margin = ctrl+shift+b
