--- a/share/config/session/current.conf
+++ b/share/config/session/current.conf
@@ -1,9 +1,9 @@
-current_nr = 2
+current_nr = 0
 <document>
     EOL = cr+lf
     codepage = 
-    cursor_pos = 1653
-    edit_pos = 364
+    cursor_pos = 0
+    edit_pos = 213
     file_path = D:\src\perl\editor\dev\base\lib\Kephra.pm
     readonly = protect
     syntaxmode = perl
@@ -13,19 +13,8 @@ current_nr = 2
 <document>
     EOL = cr+lf
     codepage = 
-    cursor_pos = 1374
-    edit_pos = -1
-    file_path = share\config\localisation\deutsch_iso.conf
-    readonly = protect
-    syntaxmode = conf
-    tab_size = 4
-    tab_use = 1
-</document>
-<document>
-    EOL = cr+lf
-    codepage = 
-    cursor_pos = 7637
-    edit_pos = 2898
+    cursor_pos = 1924
+    edit_pos = 1884
     file_path = D:\src\perl\editor\dev\base\lib\Kephra\Document.pm
     readonly = protect
     syntaxmode = perl
@@ -35,35 +24,33 @@ current_nr = 2
 <document>
     EOL = cr+lf
     codepage = 
-    config_file = 1
-    cursor_pos = 607
-    edit_pos = -1
-    file_path = share\config\templates\perl.conf
+    cursor_pos = 0
+    edit_pos = 2226
+    file_path = D:\src\perl\editor\dev\base\lib\Kephra\Document\Internal.pm
     readonly = protect
-    syntaxmode = conf
+    syntaxmode = perl
     tab_size = 4
     tab_use = 1
 </document>
 <document>
     EOL = cr+lf
     codepage = 
-    config_file = 1
     cursor_pos = 0
     edit_pos = -1
-    file_path = share\config\interface\mainmenu.yml
+    file_path = D:\src\perl\editor\dev\base\lib\Kephra\Document\Property.pm
     readonly = protect
-    syntaxmode = yaml
+    syntaxmode = perl
     tab_size = 4
     tab_use = 1
 </document>
 <document>
     EOL = cr+lf
     codepage = 
-    cursor_pos = 445
-    edit_pos = 0
-    file_path = D:\src\perl\editor\releasetool\projects.yml
+    cursor_pos = 5643
+    edit_pos = 5643
+    file_path = D:\src\perl\editor\dev\base\lib\Kephra\Edit\Format.pm
     readonly = protect
-    syntaxmode = yaml
+    syntaxmode = perl
     tab_size = 4
     tab_use = 1
 </document>
