--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -204,6 +204,10 @@
 				cr = Kephra::Document::convert_EOL('cr')
 				lf = Kephra::Document::convert_EOL('lf')
 			</EOL>
+			<move>
+				left = Kephra::Document::move_left()
+				right = Kephra::Document::move_right()
+			</move>
 			<readonly>
 				as-attr = Kephra::Document::set_readonly('protect')
 				on = Kephra::Document::set_readonly('on')
@@ -788,10 +792,14 @@
 		</bookmark>
 		<document>
 			<change>
-				back = ctrl+back
+				back = ctrl+shift+back
 				prev = ctrl+pgup
 				next = ctrl+pgdn
 			</change>
+			<move>
+				left = ctrl+shift+pgup
+				right = ctrl+shift+pgdn
+			</move>
 		</document>
 		<view>
 			<toolbar>
