--- a/share/config/localisation/deutsch_iso.conf
+++ b/share/config/localisation/deutsch_iso.conf
@@ -10,7 +10,8 @@
 	</general>
 	<menu>
 		file = &Datei
-		file_open = &Datei Öffnen
+		file_open = Öffnen Weitere
+		file_save = Speichern Weitere
 		file_insert_templates = &Templates
 		file_history = &Zuletzt Verwendete
 		file_session = &Gruppe
@@ -264,6 +265,10 @@
 				prev = Voriges
 				next = Nächtes
 			</change>
+			<move>
+				left = Nach Links
+				right = Nach Rechts
+			</move>
 			<readonly>
 				as-attr = Nach Attribut
 				on = an
@@ -648,6 +653,10 @@
 				prev = wechsle zum Dokument mit der nächstniedrigen Nummer
 				next = wechsle zum Dokument mit der nächsthöheren Nummer
 			</change>
+			<move>
+				left = verschiebe aktuelles Dokument in der Tabbar eins nach links
+				right = verschiebe aktuelles Dokument in der Tabbar eins nach rechts
+			</move>
 			<readonly>
 				as-attr = aktiviert Schreibschutz wenn Datei nicht veränderbar ist
 				on = aktiviert Schreibschutz unabhängig von Dateiattributen
