--- a/share/config/session/current.conf
+++ b/share/config/session/current.conf
@@ -2,9 +2,9 @@ current_nr = 0
 <document>
     EOL = cr+lf
     codepage = 
-    cursor_pos = 0
-    edit_pos = 213
-    file_path = D:\src\perl\editor\dev\base\lib\Kephra.pm
+    cursor_pos = 529
+    edit_pos = 528
+    file_path = D:\src\perl\editor\dev\base\bin\kephra
     readonly = protect
     syntaxmode = perl
     tab_size = 4
@@ -13,8 +13,8 @@ current_nr = 0
 <document>
     EOL = cr+lf
     codepage = 
-    cursor_pos = 1924
-    edit_pos = 1884
+    cursor_pos = 3772
+    edit_pos = 3772
     file_path = D:\src\perl\editor\dev\base\lib\Kephra\Document.pm
     readonly = protect
     syntaxmode = perl
@@ -24,8 +24,8 @@ current_nr = 0
 <document>
     EOL = cr+lf
     codepage = 
-    cursor_pos = 0
-    edit_pos = 2226
+    cursor_pos = 9076
+    edit_pos = 0
     file_path = D:\src\perl\editor\dev\base\lib\Kephra\Document\Internal.pm
     readonly = protect
     syntaxmode = perl
@@ -35,9 +35,33 @@ current_nr = 0
 <document>
     EOL = cr+lf
     codepage = 
-    cursor_pos = 0
-    edit_pos = -1
-    file_path = D:\src\perl\editor\dev\base\lib\Kephra\Document\Property.pm
+    config_file = 1
+    cursor_pos = 551
+    edit_pos = 551
+    file_path = share\config\interface\commands.conf
+    readonly = protect
+    syntaxmode = conf
+    tab_size = 4
+    tab_use = 1
+</document>
+<document>
+    EOL = cr+lf
+    codepage = 
+    config_file = 1
+    cursor_pos = 275
+    edit_pos = 275
+    file_path = share\config\interface\mainmenu.yml
+    readonly = protect
+    syntaxmode = yaml
+    tab_size = 4
+    tab_use = 1
+</document>
+<document>
+    EOL = cr+lf
+    codepage = 
+    cursor_pos = 219
+    edit_pos = 2182
+    file_path = D:\src\perl\editor\dev\base\lib\Kephra\File.pm
     readonly = protect
     syntaxmode = perl
     tab_size = 4
@@ -46,7 +70,18 @@ current_nr = 0
 <document>
     EOL = cr+lf
     codepage = 
-    cursor_pos = 5643
+    cursor_pos = 0
+    edit_pos = 220
+    file_path = D:\src\perl\editor\dev\base\share\config\localisation\deutsch.conf
+    readonly = protect
+    syntaxmode = conf
+    tab_size = 4
+    tab_use = 1
+</document>
+<document>
+    EOL = cr+lf
+    codepage = 
+    cursor_pos = 0
     edit_pos = 5643
     file_path = D:\src\perl\editor\dev\base\lib\Kephra\Edit\Format.pm
     readonly = protect
