--- a/share/config/localisation/cesky_iso.conf
+++ b/share/config/localisation/cesky_iso.conf
@@ -10,7 +10,8 @@
 	</general>
 	<menu>
 		file = Soubor
-		file_open = Otevírat Soubor
+		file_open = Otevírat Vice
+		file_save = Save Vice
 		file_insert_templates = Pr(edloha
 		file_history = Historie
 		file_session = Skupina
@@ -264,6 +265,10 @@
 				prev = Previous Tab
 				next = Next Tab
 			</change>
+			<move>
+				left = Move Left
+				right = Move Right
+			</move>
 			<readonly>
 				as-attr = As Attribute
 				on = Always On
@@ -648,6 +653,10 @@
 				prev = changes the current document one tab to the left
 				next = changes the current document one tab to the right
 			</change>
+			<move>
+				left = move current document in the tabbar one pos to the left
+				right = move current document in the tabbar one pos to the right
+			</move>
 			<readonly>
 				as-attr = turns write protection on if file is readonly
 				on = disables every modification of this document
