--- a/share/config/localisation/deutsch.conf
+++ b/share/config/localisation/deutsch.conf
@@ -10,7 +10,8 @@
 	</general>
 	<menu>
 		file = &Datei
-		file_open = &Datei Oeffnen
+		file_open = Oeffnen Weitere
+		file_save = Speichern Weitere
 		file_insert_templates = &Templates
 		file_history = &Zuletzt Verwendete
 		file_session = &Gruppe
@@ -264,6 +265,10 @@
 				prev = Voriges
 				next = Naechtes
 			</change>
+			<move>
+				left = Nach Links
+				right = Nach Rechts
+			</move>
 			<readonly>
 				as-attr = Nach Attribut
 				on = An
@@ -648,6 +653,10 @@
 				prev = wechsle zum Dokument mit der naechstniedrigen Nummer
 				next = wechsle zum Dokument mit der naechsthoeheren Nummer
 			</change>
+			<move>
+				left = verschiebe aktuelles Dokument in der Tabbar eins nach links
+				right = verschiebe aktuelles Dokument in der Tabbar eins nach rechts
+			</move>
 			<readonly>
 				as-attr = aktiviert Schreibschutz wenn Datei nicht veraenderbar ist
 				on = aktiviert Schreibschutz unabhaengig von Dateiattributen
