--- a/share/config/global/default/default.conf
+++ b/share/config/global/default/default.conf
@@ -31,6 +31,7 @@
 	<menubar>
 		file = interface/mainmenu.yml       # file wich contains main menu
 		node = full_menubar                 # root node name
+		responsive = 1                      # (0|1) 0 prevent menubar item shading
 	</menubar>
 	<statusbar>
 		file = interface/appbars.yml
@@ -75,7 +76,7 @@
 			contextmenu = toolbar_search
 			file = interface/appbars.conf
 			node = searchbar
-			position = bottom
+			position = bottom               # (top|middle|bottom)
 			visible = 1
 		</search>
 	</toolbar>
