--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -312,8 +312,9 @@
 				</margin>
 			</editpanel>
 			statusbar = Kephra::App::StatusBar::switch_visibility()
-			statusbar-contexmenu = Kephra::App::StatusBar::switch_contexmenu_visibility()
+			statusbar-contexmenu = Kephra::App::StatusBar::switch_contextmenu_visibility()
 			tabbar = Kephra::App::TabBar::switch_visibility()
+			tabbar-contexmenu = Kephra::App::TabBar::switch_contextmenu_visibility()
 			<toolbar>
 				main = Kephra::App::MainToolBar::switch_visibility()
 				search-goto = Kephra::App::SearchBar::enter_focus()
@@ -600,8 +601,9 @@
 				</margin>
 			</editpanel>
 			statusbar = Kephra::App::StatusBar::get_visibility()
-			statusbar-contexmenu = Kephra::App::StatusBar::get_contexmenu_visibility()
+			statusbar-contexmenu = Kephra::App::StatusBar::get_contextmenu_visibility()
 			tabbar = Kephra::App::TabBar::get_visibility()
+			tabbar-contexmenu = Kephra::App::TabBar::get_contextmenu_visibility()
 			toolbar-search = Kephra::App::SearchBar::get_visibility()
 			toolbar-main = Kephra::App::MainToolBar::get_visibility()
 			window-stay-on-top = Kephra::App::Window::get_on_top_mode()
@@ -609,8 +611,8 @@
 	</state>
 	<state_event>
 		<view>
-			editpanel-line-wrap = editpanel.autowrap
-			window-stay-on-top = app.window.ontop
+			editpanel-line-wrap = editpanel.autowrap#
+			window-stay-on-top = app.window.ontop#
 		</view>
 	</state_event>
 	<icon>
