--- a/share/config/localisation/deutsch_iso.conf
+++ b/share/config/localisation/deutsch_iso.conf
@@ -43,7 +43,9 @@
 		document_lineendchar = Zeilenendzeichen
 		document_readonly = Schreibschutz
 		view = Ansicht
-		view_contexmenu = Kontextmenü
+		view_bars = Leisten
+		view_contextmenu = Kontextmenüs
+		view_editpanel_contexmenu = Editor
 		view_textmargin = Textrand
 		config = Einstellungen
 		config_app_lang = Sprache
@@ -373,8 +375,9 @@
 				</margin>
 			</editpanel>
 			statusbar = Statuszeile
-			statusbar-contexmenu = Statuskontext
-			tabbar = Dateireiter
+			statusbar-contexmenu = Statuszeile
+			tabbar = Reiterleiste
+			tabbar-contexmenu = Reiterleiste
 			<toolbar>
 				main = Werkzeugleiste
 				search = Suchzeile
@@ -654,8 +657,8 @@
 				next = wechsle zum Dokument mit der nächsthöheren Nummer
 			</change>
 			<move>
-				left = verschiebe aktuelles Dokument in der Tabbar eins nach links
-				right = verschiebe aktuelles Dokument in der Tabbar eins nach rechts
+				left = verschiebe aktuelles Dokument in der Reiterleiste eins nach links
+				right = verschiebe aktuelles Dokument in der Reiterleiste eins nach rechts
 			</move>
 			<readonly>
 				as-attr = aktiviert Schreibschutz wenn Datei nicht veränderbar ist
@@ -762,7 +765,8 @@
 			</editpanel>
 			statusbar = Statuszeile am Boden des Programmfensters
 			statusbar-contexmenu = schalte Kontextmenüs der Statuszeile an oder aus
-			tabbar = die Reiterleiste ermöglicht Auswahl des Dokuments durch Tabs
+			tabbar = die Reiterleiste ermöglicht Auswahl des Dokuments durch (Tabs)
+			tabbar-contexmenu = schalte Kontextmenü der Reiterleiste an oder aus
 			<toolbar>
 				main = Haupt-Werkzeugleiste zum Bearbeiten der Dokumente
 				search = Werkzeugleiste mit Such- und Navigationsfunktionen
