--- a/share/config/localisation/english.conf
+++ b/share/config/localisation/english.conf
@@ -43,7 +43,9 @@
 		document_lineendchar = Lineendchars
 		document_readonly = Write Protection
 		view = View
-		view_contexmenu = Contextmenu
+		view_bars = App Bars
+		view_contextmenu = Context Menus
+		view_editpanel_contexmenu = Edit Panel
 		view_textmargin = Text Margin
 		config = Config
 		config_app_lang = Language
@@ -373,8 +375,9 @@
 				</margin>
 			</editpanel>
 			statusbar = Statusbar
-			statusbar-contexmenu = Statuscontext
+			statusbar-contexmenu = Statusbar
 			tabbar = Tabbar
+			tabbar-contexmenu = Tabbar
 			<toolbar>
 				main = Main Toolbar
 				search = Searchbar
@@ -763,6 +766,7 @@
 			statusbar = switch visibility of the statusbar on bottom of the window
 			statusbar-contexmenu = enable or disable context menus on statusbar
 			tabbar = switch visibility of the tabbar, toolbar for doc selection
+			tabbar-contexmenu = enable or disable context menus on tabbar
 			<toolbar>
 				main = switch visibility of the main toolbar
 				search = toolbar with text seach and navigation functions
