--- a/share/config/session/current.conf
+++ b/share/config/session/current.conf
@@ -1,9 +1,9 @@
-current_nr = 0
+current_nr = 8
 <document>
     EOL = cr+lf
     codepage = 
-    cursor_pos = 529
-    edit_pos = 528
+    cursor_pos = 3
+    edit_pos = 7
     file_path = D:\src\perl\editor\dev\base\bin\kephra
     readonly = protect
     syntaxmode = perl
@@ -13,9 +13,20 @@ current_nr = 0
 <document>
     EOL = cr+lf
     codepage = 
-    cursor_pos = 3772
-    edit_pos = 3772
-    file_path = D:\src\perl\editor\dev\base\lib\Kephra\Document.pm
+    cursor_pos = 156
+    edit_pos = 205
+    file_path = D:\src\perl\editor\dev\base\Changes
+    readonly = protect
+    syntaxmode = none
+    tab_size = 4
+    tab_use = 1
+</document>
+<document>
+    EOL = cr+lf
+    codepage = 
+    cursor_pos = 214
+    edit_pos = 213
+    file_path = D:\src\perl\editor\dev\base\lib\Kephra.pm
     readonly = protect
     syntaxmode = perl
     tab_size = 4
@@ -24,9 +35,9 @@ current_nr = 0
 <document>
     EOL = cr+lf
     codepage = 
-    cursor_pos = 9076
-    edit_pos = 0
-    file_path = D:\src\perl\editor\dev\base\lib\Kephra\Document\Internal.pm
+    cursor_pos = 0
+    edit_pos = 525
+    file_path = D:\src\perl\editor\dev\windistro\kephra\src\kephra.pl
     readonly = protect
     syntaxmode = perl
     tab_size = 4
@@ -36,8 +47,8 @@ current_nr = 0
     EOL = cr+lf
     codepage = 
     config_file = 1
-    cursor_pos = 551
-    edit_pos = 551
+    cursor_pos = 24795
+    edit_pos = 25822
     file_path = share\config\interface\commands.conf
     readonly = protect
     syntaxmode = conf
@@ -48,8 +59,8 @@ current_nr = 0
     EOL = cr+lf
     codepage = 
     config_file = 1
-    cursor_pos = 275
-    edit_pos = 275
+    cursor_pos = 11635
+    edit_pos = -1
     file_path = share\config\interface\mainmenu.yml
     readonly = protect
     syntaxmode = yaml
@@ -59,9 +70,9 @@ current_nr = 0
 <document>
     EOL = cr+lf
     codepage = 
-    cursor_pos = 219
-    edit_pos = 2182
-    file_path = D:\src\perl\editor\dev\base\lib\Kephra\File.pm
+    cursor_pos = 3135
+    edit_pos = -1
+    file_path = D:\src\perl\editor\dev\base\lib\Kephra\App\ContextMenu.pm
     readonly = protect
     syntaxmode = perl
     tab_size = 4
@@ -70,22 +81,23 @@ current_nr = 0
 <document>
     EOL = cr+lf
     codepage = 
-    cursor_pos = 0
-    edit_pos = 220
-    file_path = D:\src\perl\editor\dev\base\share\config\localisation\deutsch.conf
+    cursor_pos = 117
+    edit_pos = -1
+    file_path = D:\src\perl\editor\dev\base\lib\Kephra\App\EditPanel.pm
+    readonly = protect
+    syntaxmode = perl
+    tab_size = 4
+    tab_use = 1
+</document>
+<document>
+    EOL = cr+lf
+    codepage = 
+    config_file = 1
+    cursor_pos = 889
+    edit_pos = 888
+    file_path = D:\src\perl\editor\dev\base\share\config\global\autosaved.conf
     readonly = protect
     syntaxmode = conf
-    tab_size = 4
-    tab_use = 1
-</document>
-<document>
-    EOL = cr+lf
-    codepage = 
-    cursor_pos = 0
-    edit_pos = 5643
-    file_path = D:\src\perl\editor\dev\base\lib\Kephra\Edit\Format.pm
-    readonly = protect
-    syntaxmode = perl
     tab_size = 4
     tab_use = 1
 </document>
