--- a/share/config/interface/appbars.yml
+++ b/share/config/interface/appbars.yml
@@ -19,7 +19,7 @@ main_toolbar:
  - checkitem view-window-stay-on-top
  -
  - item view-dialog-find#
- - item view-dialog-config#
+ - item view-dialog-config
  - item view-dialog-keymap#
 
 searchbar:
