--- a/share/config/localisation/deutsch.conf
+++ b/share/config/localisation/deutsch.conf
@@ -43,7 +43,9 @@
 		document_lineendchar = Zeilenendzeichen
 		document_readonly = Schreibschutz
 		view = Ansicht
-		view_contexmenu = Kontextmenue
+		view_bars = Leisten
+		view_contextmenu = Kontextmenues
+		view_editpanel_contexmenu = Editor
 		view_textmargin = Textrand
 		config = Einstellungen
 		config_app_lang = Sprache
@@ -372,9 +374,10 @@
 					</text>
 				</margin>
 			</editpanel>
-			statusbar = Statuszeile
-			statusbar-contexmenu = Statuskontext
-			tabbar = Dateireiter
+			statusbar = Statusleiste
+			statusbar-contexmenu = Statusleiste
+			tabbar = Reiterleiste
+			tabbar-contexmenu = Reiterleiste
 			<toolbar>
 				main = Werkzeugleiste
 				search = Suchzeile
@@ -654,8 +657,8 @@
 				next = wechsle zum Dokument mit der naechsthoeheren Nummer
 			</change>
 			<move>
-				left = verschiebe aktuelles Dokument in der Tabbar eins nach links
-				right = verschiebe aktuelles Dokument in der Tabbar eins nach rechts
+				left = verschiebe aktuelles Dokument in der Reiterleiste eins nach links
+				right = verschiebe aktuelles Dokument in der Reiterleiste eins nach rechts
 			</move>
 			<readonly>
 				as-attr = aktiviert Schreibschutz wenn Datei nicht veraenderbar ist
@@ -763,6 +766,7 @@
 			statusbar = Statuszeile am Boden des Programmfensters
 			statusbar-contexmenu = schalte Kontextmenues der Statuszeile an oder aus
 			tabbar = die Reiterleiste ermoeglicht Auswahl des Dokuments durch Tabs
+			tabbar-contexmenu = schalte Kontextmenue der Reiterleiste an oder aus
 			<toolbar>
 				main = Haupt-Werkzeugleiste zum Bearbeiten der Dokumente
 				search = Werkzeugleiste mit Such- und Navigationsfunktionen
