Import of LICHTKIND/Kephra-0.3.8_8 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.8_8
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.8_8.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/global/autosaved.conf
+++ b/share/config/global/autosaved.conf
@@ -13,11 +13,62 @@
     </config>
     button_handing = right
 </dialog>
+<search>
+    <history>
+        find_item = üb
+        find_item = a
+        find_item = base
+        find_item = g
+        find_item = WXK_BACK
+        find_item = line
+        find_item = line-nr
+        find_item = _get
+        find_item = _get_config
+        find_item = menu_visibility
+        find_item = switch_contexmenu_visibility
+        find_item = tabbar
+        save = 1
+        length = 12
+        use = 1
+        remember_only_matched = 1
+        current_find_item = sdsdsdsd
+        replace_item = require_ok('
+        replace_item = require_ok
+        replace_item = b
+        replace_item = a
+        replace_item = ditP
+        replace_item = changes
+        replace_item = Changes
+        replace_item = d
+        replace_item = syn
+        replace_item = for
+        replace_item = language
+        replace_item = with
+        current_replace_item = rk'
+    </history>
+    <attribute>
+        match_regex = 1
+        match_case = 
+        match_whole_word = 0
+        auto_wrap = 1
+        in = document
+        match_word_begin = 0
+        fast_steps = 7
+        incremental = 1
+    </attribute>
+    <hyper>
+        directory = F:\src\perl
+        in_subdirs = 1
+        in = document
+    </hyper>
+    <bookmark>
+    </bookmark>
+</search>
 <app>
     <menubar>
-        responsive = 1
         file = interface/mainmenu.yml
         node = full_menubar
+        responsive = 1
     </menubar>
     <window>
         icon = interface/icon/app/proton.ico
@@ -31,9 +82,9 @@
             title = $path $vnr
             size_x = full_screen
         </default>
-        position_y = 1
+        position_y = -4
         stay_on_top = 0
-        position_x = 36
+        position_x = 29
         title = $filepath - $appname $version
         size_x = 741
     </window>
@@ -112,57 +163,6 @@
         </cache>
     </commandlist>
 </app>
-<search>
-    <history>
-        remember_only_matched = 1
-        current_find_item = üb
-        replace_item = require_ok('
-        replace_item = require_ok
-        replace_item = b
-        replace_item = a
-        replace_item = ditP
-        replace_item = changes
-        replace_item = Changes
-        replace_item = d
-        replace_item = syn
-        replace_item = for
-        replace_item = language
-        replace_item = with
-        find_item = üb
-        find_item = a
-        find_item = base
-        find_item = g
-        find_item = WXK_BACK
-        find_item = line
-        find_item = line-nr
-        find_item = _get
-        find_item = _get_config
-        find_item = menu_visibility
-        find_item = switch_contexmenu_visibility
-        find_item = tabbar
-        save = 1
-        length = 12
-        use = 1
-        current_replace_item = rk'
-    </history>
-    <attribute>
-        match_regex = 1
-        match_case = 
-        match_whole_word = 0
-        auto_wrap = 1
-        in = document
-        match_word_begin = 0
-        fast_steps = 7
-        incremental = 1
-    </attribute>
-    <hyper>
-        directory = F:\src\perl
-        in_subdirs = 1
-        in = document
-    </hyper>
-    <bookmark>
-    </bookmark>
-</search>
 <texts>
     credits = deutsch/lizenz/anerkennung.txt
     version = deutsch/diese_version.txt
@@ -307,13 +307,10 @@
     <history>
         path = share\config\global\autosaved.conf
         path = share\config\interface\mainmenu.yml
-        path = share\config\interface\commands.conf
         path = share\config\localisation\english.conf
         path = D:\src\perl\editor\dev\base\share\config\localisation\cesky_iso.conf
         path = D:\src\perl\editor\dev\base\share\config\localisation\deutsch.conf
-        path = D:\src\perl\editor\dev\base\share\config\localisation\deutsch_iso.conf
         path = D:\src\perl\editor\dev\base\t\01_compile.t
-        path = share\config\interface\contextmenus.yml
         path = D:\src\perl\editor\dev\base\share\config\global\autosaved.conf
         path = D:\src\perl\editor\dev\base\lib\Kephra\Config\Embedded.pm
         length = 11
@@ -356,7 +353,7 @@
     </session>
     <current>
         directory = <<EOF
-        D:\src\perl\editor\dev\base\lib\Kephra\Config\
+        D:\src\perl\editor\dev\base\share\config\interface\
         EOF
     </current>
     <templates>
