--- a/share/config/session/current.conf
+++ b/share/config/session/current.conf
@@ -1,7 +1,7 @@
 current_nr = 4
 <document>
     codepage = 
-    cursor_pos = 415
+    cursor_pos = 184
     file_path = D:\src\perl\editor\dev\base\bin\kephra
     edit_pos = 525
     readonly = protect
@@ -12,9 +12,9 @@ current_nr = 4
 </document>
 <document>
     codepage = 
-    cursor_pos = 231
+    cursor_pos = 109
     file_path = D:\src\perl\editor\dev\base\Changes
-    edit_pos = 520
+    edit_pos = 203
     readonly = protect
     syntaxmode = none
     tab_use = 1
@@ -35,22 +35,22 @@ current_nr = 4
 <document>
     codepage = 
     cursor_pos = 0
-    file_path = D:\src\perl\editor\dev\windistro\kephra\src\kephra.pl
-    edit_pos = 525
-    readonly = protect
-    syntaxmode = perl
-    tab_use = 0
-    EOL = cr+lf
-    tab_size = 4
-</document>
-<document>
-    codepage = 
-    cursor_pos = 1173
     file_path = D:\src\perl\editor\dev\base\lib\Kephra\Config\Interface.pm
-    edit_pos = 727
+    edit_pos = 0
     readonly = protect
     syntaxmode = perl
     tab_use = 1
     EOL = cr+lf
     tab_size = 4
+</document>
+<document>
+    cursor_pos = 0
+    codepage = 
+    file_path = D:\src\perl\editor\dev\base\share\config\interface\commands.conf
+    edit_pos = -1
+    readonly = protect
+    syntaxmode = conf
+    tab_use = 1
+    tab_size = 4
+    EOL = cr+lf
 </document>
